AUTOMAKE_OPTIONS = foreign

include_HEADERS = 

dist_data_DATA = \
  bbc_hosts.list \
  cemc_hosts.list \
  daq_hosts.list \
  hcal_hosts.list \
  intt_hosts.list \
  ll1_hosts.list \
  localpol_hosts.list \
  monitoring_hosts.list \
  mvtx_hosts.list \
  sepd_hosts.list \
  spin_hosts.list \
  tpc_hosts.list \
  tpot_hosts.list \
  zdc_hosts.list
