AUTOMAKE_OPTIONS = foreign

include_HEADERS =

### USE ALPHABETICAL ORDER FOR MAKEFILE LIST
### Ert needs to be build after rich so it 
### is at the end of this list
###
SUBDIRS = \
  bbc \
  ll1 \
  cemc \
  daq \
  sepd \
  example \
  hcal \
  intt \
  mvtx \
  pktsize \
  spin \
  tpc \
  tpot \
  zdc
