AUTOMAKE_OPTIONS = foreign

include_HEADERS =
cemcdatadir = $(pkgdatadir)/cemc

# please leave a space before the newline, then it still works
# even if the next line does not start with a space
cemcdata_DATA = \
  testbeam_cemc_template.root \
  Template_40929_100ADC_hits.root \
  Template_40929_30ADC_hits.root \
  Template_40929_50ADC_hits.root \
  Template_43451_100ADC_hits.root \
  Template_46915_100ADC_hits.root \
  Template_49435_100ADC_alltrig.root \
  Template_52876_100ADC_hits.root \ 
  Template_54117_100ADC_alltrig.root \  
  Template_54117_100ADC_hits.root \
  cemc_adcskipmask_40430.root
