AUTOMAKE_OPTIONS = foreign

include_HEADERS =
hcaldatadir = $(pkgdatadir)/hcal

hcaldata_DATA = \
  testbeam_ihcal_template.root \
  testbeam_ohcal_template.root \
  OHCALMON_40747.root \
  OHCALMON_54117.root \
  Template_OHCAL_54117_30ADC.root \
  IHCALMON_40747.root \
  IHCALMON_54117.root \
  Template_IHCAL_54117_30ADC.root
