AUTOMAKE_OPTIONS = foreign

include_HEADERS =
hcaldatadir = $(pkgdatadir)/hcal

hcaldata_DATA = \
  testbeam_ihcal_template.root \
  testbeam_ohcal_template.root \
  OHCALMON_40747.root \
  OHCALMON_54117.root \
  OHCALMON_54145.root \
  OHCALMON_cosmic_45022_1000ADC.root \
  IHCALMON_40747.root \
  IHCALMON_54117.root \
  IHCALMON_54145.root \
  IHCALMON_cosmic_45022_1000ADC.root
